Added tonic-build and protobuf for auth service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ path = "src/client/main.rs"
 uuid = { version = "1.3.0", features = ["v4"] }
 pbkdf2 = { version = "0.12", features = ["simple"] }
 rand_core = { version = "0.6.4", features = ["std"] }
+
+[build-dependencies]
+tonic-build = "0.12.3"
