Add tonic gRPC service for authentication

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ path = "src/client/main.rs"
 uuid = { version = "1.3.0", features = ["v4"] }
 pbkdf2 = { version = "0.12", features = ["simple"] }
 rand_core = { version = "0.6.4", features = ["std"] }
+tonic = "0.12.3"
+prost = "0.13.4"
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
