--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rand_core = { version = "0.6.4", features = ["std"] }
 tonic = "0.12.3"
 prost = "0.13.4"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
+clap = { version = "4.3.19", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
